tapos na perdev lols

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,4 +6,5 @@
 @import "body1(PerDevHO)";
 @import "HOstlyes_Stress";
 @import "HOstlyes_PowerofMind";
-@import "HOstlyes_AspectofSelf"
+@import "HOstlyes_AspectofSelf";
+@import "HOstlyes_Family"
