--- a/scss/_body1(r&w).scss
+++ b/scss/_body1(r&w).scss
@@ -1,7 +1,4 @@
-@font-face{
-    font-family: Gilroy; src:"C:\Users\user\Desktop\Portfolio\Portfolio\Assets\Gilroy-Light.eot"
-}
-.bodyPerdevHO{
+.bodyrNwHO{
     
     margin: 0;
     padding: 0;
@@ -24,13 +21,9 @@
        font-size: 20px;
        color: #cccccc;
        
-    }
-
-   
-}
-  
-    
- &_container{
+    }   
+}      
+&_container{
     background-color: rgb(255, 255, 255);
     display: flex;
     width: 100%;
