--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,4 +7,5 @@
 @import "HOstlyes_Stress";
 @import "HOstlyes_PowerofMind";
 @import "HOstlyes_AspectofSelf";
-@import "HOstlyes_Family"
+@import "HOstlyes_Family";
+@import "body1(r&w)";
