--- a/scss/style.css
+++ b/scss/style.css
@@ -463,7 +463,8 @@ html {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 1000px;
+  height: auto;
+  margin-bottom: 100px;
   z-index: 0;
 }
 
@@ -507,9 +508,8 @@ html {
 }
 
 .bodyPerdevHO_container_content_item_btn {
-  margin: 20px;
+  margin: 20px 0px 0px 720px;
   padding: 15px 45px;
-  position: absolute;
   left: 700px;
   border: 1px solid #007f5f;
   text-decoration: none;
@@ -1944,5 +1944,105 @@ html {
   -ms-flex-item-align: start;
       align-self: flex-start;
   padding-right: 50px;
+}
+
+.bodyrNwHO {
+  margin: 0;
+  padding: 0;
+  background-color: white;
+}
+
+.bodyrNwHO_title {
+  margin: 20px 0px 0px 40px;
+  position: static;
+  z-index: 1;
+}
+
+.bodyrNwHO_title > h1 {
+  font-family: 'Gilroy', sans-serif;
+  font-size: 100px;
+  color: #007f5f;
+}
+
+.bodyrNwHO_title > h4 {
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 100;
+  font-size: 5px;
+  font-size: 20px;
+  color: #cccccc;
+}
+
+.bodyrNwHO_container {
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: auto;
+  margin-bottom: 100px;
+  z-index: 0;
+}
+
+.bodyrNwHO_container_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 30px 0px 0px 30px;
+}
+
+.bodyrNwHO_container_content_item {
+  width: 900px;
+  margin: 20px 0px;
+}
+
+.bodyrNwHO_container_content_item > h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  font-size: 40px;
+  color: #007f5f;
+}
+
+.bodyrNwHO_container_content_item > h6 {
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 100;
+  margin: 0px 0px 5px 0px;
+  font-size: 15px;
+  color: #cccccc;
+}
+
+.bodyrNwHO_container_content_item > p {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.bodyrNwHO_container_content_item_btn {
+  margin: 20px 0px 0px 720px;
+  padding: 15px 45px;
+  left: 700px;
+  border: 1px solid #007f5f;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  color: #007f5f;
+  background-color: #00000000;
+  cursor: pointer;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  z-index: 1;
+}
+
+.bodyrNwHO_container_content_item_btn:hover {
+  background-color: #007f5f;
+  color: white;
+  -webkit-box-shadow: -5px 5px #FDB833;
+          box-shadow: -5px 5px #FDB833;
+  -webkit-transform: translate(5px, -5px);
+          transform: translate(5px, -5px);
 }
 /*# sourceMappingURL=style.css.map */
