proct proposal otw

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,4 +10,5 @@
 @import "HOstlyes_Family";
 @import "body1(r&w)";
 @import "HOstlyes_Article";
-@import "HOstlyes_AbstractWriting"
+@import "HOstlyes_AbstractWriting";
+@import "HOstlyes_Posistionpaper"
