--- a/scss/_HOstlyes_Posistionpaper.scss
+++ b/scss/_HOstlyes_Posistionpaper.scss
@@ -1,4 +1,4 @@
-.bodystress{
+.bodyposistionpaper{
     margin: 0;
     padding: 0;
     z-index: 1;
@@ -11,7 +11,7 @@
        font-family: 'Gilroy', sans-serif;
         
        >h1{
-           font-size: 150px;
+           font-size: 100px;
            color: $spanish_viridians;
            height: auto;
        }
@@ -44,7 +44,7 @@
             margin: 5px;
           }
         }
-        &_typeofstress{
+        &_Purposeofthepaper{
         >h2{
           margin: 5px;
         }
@@ -64,7 +64,7 @@
         }
         }
         
-        &_typeofstressor{
+        &_compositionofposistionpaper{
             >h2{
               margin: 5px;
             }
@@ -76,20 +76,19 @@
             }
     
             >ul{
-                columns: 2;
                 margin: 17px 0px;
                 >li{
-                    margin: 5px 0px;
+                    margin: 15px 0px;
                 }
             }
             }
             
-            &_tips{
+            &_Aspectofposistionpaper{
                 >h2{
                   margin: 5px;
                 }
                 >h3{
-                    margin: 0px 0px 5px 5px;
+                    margin: 0px 0px 20px 10px;
                 }
                 >p{
                     margin: 10px 0px 15px 0px;
@@ -103,8 +102,28 @@
                     }
                 }
                 }
-
-
+                &_Strategies{
+                    >h2{
+                      margin: 5px;
+                    }
+                    >h3{
+                        margin: 0px 0px 20px 10px;
+                    }
+                    >p{
+                        margin: 10px 0px 15px 0px;
+                    }
+            
+                    >ul{
+                        list-style-type: none;
+                        margin: 17px 0px;
+                        >li{
+                            margin: 15px 0px;
+                            >h3{
+                                margin: 0px 0px 10px 10px;
+                            }
+                        }
+                    }
+                    }
 
 
 
@@ -168,7 +187,7 @@
     font-family: 'Gilroy', sans-serif;
     border-radius: 40px;
     border: 5px solid #007f5f;
-    height: 450px;
+    height: auto;
     width: 308px;
     box-shadow: -10px 10px #fdb833;
 
@@ -184,7 +203,7 @@
     
     } 
     >h2{
-        font-size: 60px;
+        font-size: 50px;
         padding: 0px 10px;
         width: 300px;
         color: $spanish_viridians;
@@ -207,7 +226,7 @@
     >ul{
        list-style-type: none;
        position: relative;
-       padding: 0px 30px;
+       padding: 0px 30px 30px;
        width: 300px;
        
         >li{
@@ -248,7 +267,7 @@ flex-direction: column;
 }
 .sidebar{
 position: sticky;
-top:5%;
+top:0%;
 padding-top: 50px;
 align-self: flex-start;
 padding-right: 50px;
