--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,3 +13,5 @@
 @import "HOstlyes_AbstractWriting";
 @import "HOstlyes_Posistionpaper";
 @import "HOstlyes_ProjectProposal";
+@import "body1(ELS)";
+@import "HOstlyes_Natural"
