--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,4 +14,5 @@
 @import "HOstlyes_Posistionpaper";
 @import "HOstlyes_ProjectProposal";
 @import "body1(ELS)";
-@import "HOstlyes_Natural"
+@import "HOstlyes_Natural";
+@import "HOstlyes_TheoryofLife"
