--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,4 +15,5 @@
 @import "HOstlyes_ProjectProposal";
 @import "body1(ELS)";
 @import "HOstlyes_Natural";
-@import "HOstlyes_TheoryofLife"
+@import "HOstlyes_TheoryofLife";
+@import "HOstlyes_Life";
