--- a/scss/style.css
+++ b/scss/style.css
@@ -3884,4 +3884,304 @@ html {
       align-self: flex-start;
   padding-right: 50px;
 }
+
+.bodyLife {
+  margin: 0;
+  padding: 0;
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+}
+
+.bodyLife_container {
+  height: 100%;
+}
+
+.bodyLife_container_title {
+  font-family: 'Gilroy', sans-serif;
+}
+
+.bodyLife_container_title > h1 {
+  font-size: 100px;
+  color: #007f5f;
+  height: auto;
+}
+
+.bodyLife_container_title > h4 {
+  font-size: 15px;
+  font-weight: lighter;
+}
+
+.bodyLife_container_title > h6 {
+  font-size: 10px;
+  font-weight: lighter;
+  margin-bottom: 10px;
+}
+
+.bodyLife_container_textarea {
+  width: 900px;
+  font-family: 'Gilroy', sans-serif;
+  font-weight: lighter;
+  font-size: 15px;
+  margin: 20px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: wrap;
+      -ms-flex: wrap;
+          flex: wrap;
+}
+
+.bodyLife_container_textarea_introduction > p {
+  margin: 10px 0px;
+}
+
+.bodyLife_container_textarea_introduction > h2 {
+  margin: 5px;
+}
+
+.bodyLife_container_textarea_ProkaryotesandEukaryotes > h2 {
+  margin: 5px;
+}
+
+.bodyLife_container_textarea_ProkaryotesandEukaryotes > h3 {
+  margin: 0px 0px 5px 5px;
+}
+
+.bodyLife_container_textarea_ProkaryotesandEukaryotes > p {
+  margin: 10px 0px 15px 0px;
+}
+
+.bodyLife_container_textarea_ProkaryotesandEukaryotes > ul {
+  -webkit-columns: 2;
+          columns: 2;
+  margin: 17px 0px;
+}
+
+.bodyLife_container_textarea_ProkaryotesandEukaryotes > ul > li {
+  margin: 5px 0px;
+}
+
+.bodyLife_container_textarea_Prokaryotes > h2 {
+  margin: 5px;
+}
+
+.bodyLife_container_textarea_Prokaryotes > h3 {
+  margin: 0px 0px 5px 5px;
+}
+
+.bodyLife_container_textarea_Prokaryotes > p {
+  margin: 10px 0px 15px 0px;
+}
+
+.bodyLife_container_textarea_Prokaryotes > ol {
+  margin: 17px 0px;
+}
+
+.bodyLife_container_textarea_Prokaryotes > ol > li {
+  margin: 15px 0px;
+}
+
+.bodyLife_container_textarea_Prokaryotes > img {
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+  height: 500px;
+  display: block;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.bodyLife_container_textarea_Eukaryotes > h2 {
+  margin: 5px;
+}
+
+.bodyLife_container_textarea_Eukaryotes > h3 {
+  margin: 0px 0px 10px 10px;
+}
+
+.bodyLife_container_textarea_Eukaryotes > p {
+  margin: 10px 0px 15px 0px;
+}
+
+.bodyLife_container_textarea_Eukaryotes > ol {
+  margin: 17px 0px;
+}
+
+.bodyLife_container_textarea_Eukaryotes > ol > li {
+  margin: 15px 0px;
+}
+
+.bodyLife_container_textarea_Eukaryotes > img {
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+  height: 500px;
+  display: block;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.bodyLife_activity_section {
+  font-family: 'Gilroy',sans-serif;
+  margin: 0px;
+  padding-bottom: 40px;
+  height: 100%;
+  position: relative;
+}
+
+.bodyLife_activity_section > h1 {
+  font-size: 90px;
+  margin-bottom: 15px;
+  color: #007f5f;
+}
+
+.bodyLife_activity_section > h5 {
+  font-size: 20px;
+  margin: 10px 0px;
+}
+
+.bodyLife_activity_section > ol > li {
+  margin: 10px 0px;
+}
+
+.bodyLife_activity_section > p {
+  margin: 5px 0px;
+  text-align: center;
+}
+
+.bodyLife_activity_section_btn {
+  font-family: 'Montserrat', sans-serif;
+  margin: 20px;
+  padding: 15px 45px;
+  position: relative;
+  border: 1px solid #007f5f;
+  text-decoration: none;
+  color: #007f5f;
+  background-color: #00000000;
+  cursor: pointer;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+
+.bodyLife_activity_section_btn:hover {
+  background-color: #007f5f;
+  color: white;
+  -webkit-box-shadow: -5px 5px #FDB833;
+          box-shadow: -5px 5px #FDB833;
+  -webkit-transform: translate(5px, -5px);
+          transform: translate(5px, -5px);
+}
+
+.bodyLife_stickyui {
+  top: 40px;
+  z-index: 1;
+  width: 300px;
+}
+
+.bodyLife_stickyui_content {
+  font-family: 'Gilroy', sans-serif;
+  border-radius: 40px;
+  border: 5px solid #007f5f;
+  height: auto;
+  width: 308px;
+  -webkit-box-shadow: -10px 10px #fdb833;
+          box-shadow: -10px 10px #fdb833;
+}
+
+.bodyLife_stickyui_content > h1 {
+  font-size: 20x;
+  margin-bottom: 10px;
+  padding: 20px 10px;
+  width: 300px;
+  border-radius: 25px 25px 0px 0px;
+  background-color: #007f5f;
+  font-weight: lighter;
+  color: white;
+}
+
+.bodyLife_stickyui_content > h2 {
+  font-size: 50px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #007f5f;
+}
+
+.bodyLife_stickyui_content > h6 {
+  font-size: 15px;
+  font-weight: lighter;
+  margin-bottom: 30px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #cccccc;
+}
+
+.bodyLife_stickyui_content > h3 {
+  font-size: 30px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #007f5f;
+}
+
+.bodyLife_stickyui_content > ul {
+  list-style-type: none;
+  position: relative;
+  padding: 0px 30px 30px;
+  width: 300px;
+}
+
+.bodyLife_stickyui_content > ul > li {
+  margin: 0px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.bodyLife_stickyui_content > ul > li > a {
+  display: block;
+  color: #7f7f7f;
+  text-align: left;
+  padding: 5px 0px;
+  text-decoration: none;
+  font-size: 15px;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+.bodyLife_stickyui_content > ul > li > a:hover {
+  color: #007f5f;
+  margin-left: 5px;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 1024px;
+}
+
+.maincontent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0%;
+  padding-top: 50px;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  padding-right: 50px;
+}
 /*# sourceMappingURL=style.css.map */
