--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "header";
 @import "body";
 @import "footer";
+@import "Handouts";
 @import "body1(PerDevHO)";
 @import "HOstlyes_Stress";
 @import "HOstlyes_PowerofMind";
