--- a/scss/style.css
+++ b/scss/style.css
@@ -431,6 +431,151 @@ html {
   src: "C:\Users\user\Desktop\Portfolio\Portfolio\Assets\Gilroy-Light.eot";
 }
 
+.Handouts {
+  margin: 0;
+  padding: 0;
+  background-color: white;
+}
+
+.Handouts_title {
+  margin: 20px 0px 0px 40px;
+  position: static;
+  z-index: 1;
+}
+
+.Handouts_title > h1 {
+  font-family: 'Gilroy', sans-serif;
+  font-size: 100px;
+  color: #007f5f;
+}
+
+.Handouts_title > h4 {
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 100;
+  font-size: 5px;
+  font-size: 20px;
+  color: #cccccc;
+}
+
+.Handouts_container {
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 990px;
+  height: auto;
+  margin-bottom: 30px;
+  z-index: 0;
+}
+
+.Handouts_container_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 30px 60px 0px 30px;
+}
+
+.Handouts_container_content_item {
+  width: 900px;
+  margin: 20px 0px;
+}
+
+.Handouts_container_content_item > h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  font-size: 40px;
+  color: #007f5f;
+}
+
+.Handouts_container_content_item > h6 {
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 100;
+  margin: 0px 0px 5px 0px;
+  font-size: 15px;
+  color: #cccccc;
+}
+
+.Handouts_container_content_item > p {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.Handouts_container_content_item_btn {
+  margin: 20px 0px 0px 720px;
+  padding: 15px 45px;
+  left: 700px;
+  border: 1px solid #007f5f;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  color: #007f5f;
+  background-color: #00000000;
+  cursor: pointer;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  z-index: 1;
+}
+
+.Handouts_container_content_item_btn:hover {
+  background-color: #007f5f;
+  color: white;
+  -webkit-box-shadow: -5px 5px #FDB833;
+          box-shadow: -5px 5px #FDB833;
+  -webkit-transform: translate(5px, -5px);
+          transform: translate(5px, -5px);
+}
+
+.Handouts .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 1200px;
+}
+
+.Handouts .maincontent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.Handouts .sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 5%;
+  padding-top: 50px;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  padding-right: 50px;
+}
+
+[aos="fade"].aos-animate {
+  opacity: 0;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+}
+
+[aos="fade"] {
+  opacity: 1;
+}
+
+@font-face {
+  font-family: Gilroy;
+  src: "C:\Users\user\Desktop\Portfolio\Portfolio\Assets\Gilroy-Light.eot";
+}
+
 .bodyPerdevHO {
   margin: 0;
   padding: 0;
