--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import "body";
 @import "footer";
 @import "Handouts";
+@import "Activity";
 @import "body1(PerDevHO)";
 @import "HOstlyes_Stress";
 @import "HOstlyes_PowerofMind";
