tapos na homepage nalng

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "footer";
 @import "Handouts";
 @import "Activity";
+@import "Exam";
 @import "body1(PerDevHO)";
 @import "HOstlyes_Stress";
 @import "HOstlyes_PowerofMind";
