--- a/scss/style.css
+++ b/scss/style.css
@@ -914,6 +914,267 @@ html {
   src: "C:\Users\user\Desktop\Portfolio\Portfolio\Assets\Gilroy-Light.eot";
 }
 
+.Exam {
+  margin: 0;
+  padding: 0;
+  background-color: white;
+}
+
+.Exam_title {
+  margin: 20px 0px 0px 40px;
+  position: static;
+  z-index: -1;
+}
+
+.Exam_title > h1 {
+  font-family: 'Gilroy', sans-serif;
+  font-size: 30px;
+  color: #007f5f;
+}
+
+.Exam_title > h4 {
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 100;
+  font-size: 5px;
+  font-size: 20px;
+  color: #cccccc;
+}
+
+.Exam_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 990px;
+  height: auto;
+  margin-bottom: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 0;
+}
+
+.Exam_container_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  z-index: 1;
+}
+
+.Exam_container_content > iframe {
+  width: 1160px;
+  height: 1000px;
+  margin-bottom: 100px;
+}
+
+.Exam_container_content > h3 {
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 100;
+  margin: 0px 0px 5px 0px;
+  font-size: 15px;
+  color: black;
+}
+
+.Exam_container_content_item {
+  width: 900px;
+  margin: 20px 0px;
+}
+
+.Exam_container_content_item > h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  font-size: 50px;
+  color: #007f5f;
+}
+
+.Exam_container_content_item > h3 {
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 100;
+  margin: 0px 0px 5px 0px;
+  font-size: 15px;
+  color: #cccccc;
+}
+
+.Exam_container_content_item > ol {
+  font-family: 'Gilroy', sans-serif;
+}
+
+.Exam_container_content_item > ol > li {
+  margin: 10px 0px;
+}
+
+.Exam_container_content_item > p {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 40px;
+}
+
+.Exam_container_content_item_btn {
+  margin: 20px 0px 0px 720px;
+  padding: 15px 45px;
+  left: 700px;
+  border: 1px solid #007f5f;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  color: #007f5f;
+  background-color: #00000000;
+  cursor: pointer;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  z-index: 1;
+}
+
+.Exam_container_content_item_btn:hover {
+  background-color: #007f5f;
+  color: white;
+  -webkit-box-shadow: -5px 5px #FDB833;
+          box-shadow: -5px 5px #FDB833;
+  -webkit-transform: translate(5px, -5px);
+          transform: translate(5px, -5px);
+}
+
+.Exam_stickyui {
+  top: 40px;
+  z-index: 1;
+  width: 300px;
+}
+
+.Exam_stickyui_content {
+  font-family: 'Gilroy', sans-serif;
+  border-radius: 40px;
+  border: 5px solid #007f5f;
+  height: auto;
+  width: 308px;
+  -webkit-box-shadow: -10px 10px #fdb833;
+          box-shadow: -10px 10px #fdb833;
+}
+
+.Exam_stickyui_content > h1 {
+  font-size: 20x;
+  margin-bottom: 10px;
+  padding: 20px 10px;
+  width: 300px;
+  border-radius: 25px 25px 0px 0px;
+  background-color: #007f5f;
+  font-weight: lighter;
+  color: white;
+}
+
+.Exam_stickyui_content > h2 {
+  font-size: 30px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #007f5f;
+}
+
+.Exam_stickyui_content > h6 {
+  font-size: 15px;
+  font-weight: lighter;
+  margin-bottom: 30px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #cccccc;
+}
+
+.Exam_stickyui_content > h3 {
+  font-size: 30px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #007f5f;
+}
+
+.Exam_stickyui_content > ul {
+  list-style-type: none;
+  position: relative;
+  padding: 0px 30px 20px 50px;
+  width: 300px;
+}
+
+.Exam_stickyui_content > ul > li {
+  margin: 0px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.Exam_stickyui_content > ul > li > a {
+  display: block;
+  color: #7f7f7f;
+  text-align: left;
+  padding: 5px 0px;
+  text-decoration: none;
+  font-size: 15px;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+.Exam_stickyui_content > ul > li > a:hover {
+  color: #007f5f;
+  margin-left: 5px;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 1200px;
+}
+
+.maincontent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.maincontent > #title {
+  font-size: 200px;
+  font-family: 'Gilroy', sans-serif;
+  color: #007f5f;
+  left: 50px;
+  position: relative;
+  z-index: -1;
+}
+
+.sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 5%;
+  padding-top: 50px;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  padding-right: 50px;
+}
+
+@keyframes anim1 {
+  from {
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@font-face {
+  font-family: Gilroy;
+  src: "C:\Users\user\Desktop\Portfolio\Portfolio\Assets\Gilroy-Light.eot";
+}
+
 .bodyPerdevHO {
   margin: 0;
   padding: 0;
