--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -3,13 +3,187 @@
     padding: 0px;
     background-color: $honey_yellow;
     width: 100%;
+
     
     &_box{
-        height: 625px;
+        height: 644px;
 
-        &_frames_imgs{
-        height: 100px;
-       }
+        &_frames{
+            margin: 0;
+            position: absolute;
+             top: 60%;
+            left: 50%;
+
+            
+            &_imgs1{
+                height: 100px;
+                position: absolute;
+                z-index: 0;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                animation: Animation1 2s ease-in-out 0s 1 forwards, Animation2 2s ease-in-out 5s 1 forwards;
+             }
+            &_imgs2{
+                height: 100px;
+                position: absolute;
+                z-index: 1;
+                top: -5px;
+                left: -5px;
+                transform: translate(-50%, -50%);
+                animation: Animation1 1.5s ease-in-out 0s 1 forwards, Animation2 1.5s ease-in-out 5s 1 forwards;
+             }
+            &_imgs3{
+                height: 100px;
+                position: absolute;
+                z-index: 2;
+                top: -10px;
+                left: -10px;
+                transform: translate(-50%, -50%);
+                animation: Animation1 1s ease-in-out 0s 1 forwards, Animation2 1s ease-in-out 5s 1 forwards;
+             }
+            &_imgs4{
+                height: 100px;
+                position: absolute;
+                z-index: -1;
+                top: 5px;
+                left: 5px;
+                transform: translate(-50%, -50%);
+                animation: Animation1 2.5s ease-in-out 0s 1 forwards, Animation2 2.5s ease-in-out 5s 1 forwards;
+             }
+            &_imgs5{
+                height: 100px;
+                position: absolute;
+                z-index: -2;
+                top: 10px;
+                left: 10px;
+                transform: translate(-50%, -50%);
+                animation: Animation1 3s ease-in-out 0s 1 forwards, Animation2 3s ease-in-out 5s 1 forwards;
+             }
+            
+            
+            
+        }
+    &_text{
+        font-family: 'Gilroy', sans-serif;
+        color: $spanish-viridians;
+        margin: 30px;
+        position: absolute;
+        top: 400px;
+        width: 1000px;
+        >#Firstname{
+            font-size: 100px;
+            animation: name1 1.5s ease-in-out 0s 1 forwards;
+        }
+        >#Surname{
+            font-size: 150px;
+            animation: name1 1.5s ease-in-out 0s 1 forwards;
+        }
+        >#Firstname1{
+            position: absolute;
+            font-size: 121px;
+            color: rgba(255, 255, 255, 0);
+            -webkit-text-stroke: #004b23;
+            -webkit-text-stroke-width: 2px;
+            top: -46px;
+            left: 13px;
+            z-index: -1;
+            opacity: 0;
+            animation: name1 1.5s ease-in-out 500ms 1 forwards;
+            
+        }
+        >#Surname1{
+            position: absolute;
+            font-size: 150px;
+            color: rgba(255, 255, 255, 0);
+            -webkit-text-stroke: #004b23;
+            -webkit-text-stroke-width: 2px;
+            top: 93px;
+            left: 24px;
+            z-index: -1;
+            opacity: 0;
+            animation: name1 1.5s ease-in-out 500ms 1 forwards;
+        }
+    }
+    &_HomepageLogo{
+        z-index: -1;
+        display: block;
+        >img{
+            width: auto;
+            height: 548px;
+            margin: 47px 0px;
+            right: 30px;
+            position: absolute;
+            opacity: 0;
+            animation: rotatelogo 2s ease-in-out 500ms 1 forwards;
+         }
+        }   
+}
+}
+
+
+//animation 
+@keyframes Animation1 {
+    0%{
+        transform: translate(100%, 100%); 
+        opacity: 0;  
+    }
+    50%{
+        transform: translate(100%, 100%); 
+        opacity: 0;  
+    }   
+    100%{
+        transition: translate(200%, 200%);
+        opacity: 1;
+    } 
+}
+
+@keyframes Animation2{
+    0%{
+        transition: translate(200%, 200%);
+        opacity: 1;
+    }
+    50%{
+        transform: translate(-200%, -200%); 
+        opacity: 0;  
+    }   
+    100%{
+        transform: translate(-300%, -300%); 
+        opacity: 0;  
+    }   
+
+}
+
+@keyframes name1{
+    0%{
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    50%{
+        opacity: 0;
+    }
+    
+    100%{
+        translate: translateY(-100%);
+        opacity: 1;
+    }
+}
+
+@keyframes rotatelogo {
+    0%{
+        right: -1000px;
+        opacity: 0;
+    }
+    50%{
+        transform: rotate(0deg);
+        right: 30;
+    }
+    75%{
+        
+    }
+    100%{
+        transform: rotate(-360deg);
+        opacity: 1;
     }
 
 }
